--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 <a href="week6.html"><b>6</b></a>
 <a href="week7.html"><b>7</b></a>
 <a href="week8.html"><b>8</b></a>
-<a href="week9.html"><b>9P</b></a><br>
+<a href="week9.html"><b>9</b></a>
+<a href="week10.html"><b>10P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -66,45 +67,45 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>High</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
+<tr><td><font size=2>Roger(7)</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>6605</font></td>
+    <td><font size=2>5935</font></td>
+    <td><font size=2>1325</font></td>
+    <td><font size=2>455</font></td>
+    <td><font size=2>2</font></td>
 <tr><td><font size=2>Sam(9)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>5460</font></td>
-    <td><font size=2>4655</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>6195</font></td>
+    <td><font size=2>5390</font></td>
     <td><font size=2>1045</font></td>
     <td><font size=2>425</font></td>
     <td><font size=2>1</font></td>
-<tr><td><font size=2>Roger(7)</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>6150</font></td>
-    <td><font size=2>5570</font></td>
-    <td><font size=2>1325</font></td>
-    <td><font size=2>475</font></td>
-    <td><font size=2>2</font></td>
 <tr><td><font size=2>Matthew(1)</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>5330</font></td>
-    <td><font size=2>4835</font></td>
+    <td><font size=2>5810</font></td>
+    <td><font size=2>5265</font></td>
     <td><font size=2>1360</font></td>
     <td><font size=2>220</font></td>
     <td><font size=2>2</font></td>
-<tr><td><font size=2>Steven(3)</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>4975</font></td>
-    <td><font size=2>5875</font></td>
-    <td><font size=2>910</font></td>
-    <td><font size=2>360</font></td>
-    <td><font size=2>0</font></td>
 <tr><td><font size=2>Mike(5)</font></td>
-    <td><font size=2>2</font></td>
+    <td><font size=2>3</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>4360</font></td>
-    <td><font size=2>6345</font></td>
+    <td><font size=2>4855</font></td>
+    <td><font size=2>6655</font></td>
     <td><font size=2>805</font></td>
     <td><font size=2>325</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>Steven(3)</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>5430</font></td>
+    <td><font size=2>6435</font></td>
+    <td><font size=2>910</font></td>
+    <td><font size=2>360</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2></font></td>
     <td><font size=2></font></td>
@@ -115,42 +116,42 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>John(10)</font></td>
-    <td><font size=2>6</font></td>
+    <td><font size=2>7</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>4680</font></td>
-    <td><font size=2>4165</font></td>
+    <td><font size=2>5415</font></td>
+    <td><font size=2>4900</font></td>
     <td><font size=2>765</font></td>
     <td><font size=2>390</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
 <tr><td><font size=2>Rich(2)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>5835</font></td>
-    <td><font size=2>5435</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>6265</font></td>
+    <td><font size=2>5915</font></td>
     <td><font size=2>1120</font></td>
-    <td><font size=2>465</font></td>
+    <td><font size=2>430</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>Grant(4)</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>5705</font></td>
-    <td><font size=2>5515</font></td>
+    <td><font size=2>6265</font></td>
+    <td><font size=2>5970</font></td>
     <td><font size=2>865</font></td>
     <td><font size=2>400</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Randy(8)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>5620</font></td>
-    <td><font size=2>5505</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>5930</font></td>
+    <td><font size=2>6000</font></td>
     <td><font size=2>830</font></td>
-    <td><font size=2>460</font></td>
+    <td><font size=2>310</font></td>
     <td><font size=2>2</font></td>
 <tr><td><font size=2>States(6)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>4480</font></td>
-    <td><font size=2>4695</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>4845</font></td>
+    <td><font size=2>5150</font></td>
     <td><font size=2>795</font></td>
     <td><font size=2>205</font></td>
     <td><font size=2>0</font></td>
