--- a/week9.html
+++ b/week9.html
@@ -7,58 +7,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (1)</b></font></td></tr>
-<tr><td>Prescott</td>      <td></td><td align=right>0</td></tr>
-<tr><td>McCaffrey</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Freeman</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Thielen</td>       <td></td><td align=right>0</td></tr>
-<tr><td>THiggins</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Prater</td>        <td></td><td align=right>0</td></tr>
-<tr><td>MJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Prescott</td>      <td></td><td align=right>90</td></tr>
+<tr><td>McCaffrey</td>     <td></td><td align=right>50</td></tr>
+<tr><td>Freeman</td>       <td></td><td align=right>85</td></tr>
+<tr><td>Thielen</td>       <td></td><td align=right>50</td></tr>
+<tr><td>THiggins</td>      <td></td><td align=right>35</td></tr>
+<tr><td>Kelce</td>         <td></td><td align=right>80</td></tr>
+<tr><td>Prater</td>        <td></td><td align=right>40</td></tr>
+<tr><td>MJones</td>        <td></td><td align=right>50</td></tr>
+<tr><td></td>              <td></td><td align=right>480</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (2)</b></font></td></tr>
-<tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Mahomes</td>       <td></td><td align=right>25</td></tr>
 <tr><td>Singletary</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Mixon</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Mixon</td>         <td></td><td align=right>180</td></tr>
 <tr><td>RMoore</td>        <td></td><td align=right>0</td></tr>
-<tr><td>EMoore</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Cook</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Gould</td>         <td></td><td align=right>0</td></tr>
+<tr><td>EMoore</td>        <td></td><td align=right>190</td></tr>
+<tr><td>Cook</td>          <td></td><td align=right>5</td></tr>
+<tr><td>Gould</td>         <td></td><td align=right>30</td></tr>
 <tr><td>Hubbard</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>430</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (3)</b></font></td></tr>
-<tr><td>LJackson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>DCook</td>         <td></td><td align=right>0</td></tr>
-<tr><td>MGordon</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Sutton</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Schultz</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Koo</td>           <td></td><td align=right>0</td></tr>
+<tr><td>LJackson</td>      <td></td><td align=right>175</td></tr>
+<tr><td>DCook</td>         <td></td><td align=right>55</td></tr>
+<tr><td>MGordon</td>       <td></td><td align=right>90</td></tr>
+<tr><td>Diggs</td>         <td></td><td align=right>40</td></tr>
+<tr><td>Sutton</td>        <td></td><td align=right>5</td></tr>
+<tr><td>Schultz</td>       <td></td><td align=right>25</td></tr>
+<tr><td>Koo</td>           <td></td><td align=right>65</td></tr>
 <tr><td>Chase</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>455</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (4)</b></font></td></tr>
-<tr><td>Herbert</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Kamara</td>        <td></td><td align=right>0</td></tr>
-<tr><td>DWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Waddle</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Gesicki</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Carlson</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Herbert</td>       <td></td><td align=right>240</td></tr>
+<tr><td>Kamara</td>        <td></td><td align=right>100</td></tr>
+<tr><td>DWilliams</td>     <td></td><td align=right>35</td></tr>
+<tr><td>Kupp</td>          <td></td><td align=right>45</td></tr>
+<tr><td>Waddle</td>        <td></td><td align=right>40</td></tr>
+<tr><td>Gesicki</td>       <td></td><td align=right>25</td></tr>
+<tr><td>Carlson</td>       <td></td><td align=right>75</td></tr>
 <tr><td>Mitchell</td>      <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>560</td></tr>
 </table>
 </td>
 </tr>
@@ -66,58 +66,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (5)</b></font></td></tr>
-<tr><td>JAllen</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Gibson</td>        <td></td><td align=right>0</td></tr>
+<tr><td>JAllen</td>        <td></td><td align=right>65</td></tr>
+<tr><td>Montgomery</td>    <td></td><td align=right>30</td></tr>
 <tr><td>Moss</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Jefferson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>DJohnson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Engram</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Bass</td>          <td></td><td align=right>0</td></tr>
-<tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Jefferson</td>     <td></td><td align=right>155</td></tr>
+<tr><td>DJohnson</td>      <td></td><td align=right>25</td></tr>
+<tr><td>Engram</td>        <td></td><td align=right>100</td></tr>
+<tr><td>Bass</td>          <td></td><td align=right>65</td></tr>
+<tr><td>JWilliams</td>     <td></td><td align=right>55</td></tr>
+<tr><td></td>              <td></td><td align=right>495</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (8)</b></font></td></tr>
-<tr><td>Stafford</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Henderson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Stafford</td>      <td></td><td align=right>70</td></tr>
+<tr><td>Elliott</td>       <td></td><td align=right>35</td></tr>
+<tr><td>Henderson</td>     <td></td><td align=right>25</td></tr>
 <tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
-<tr><td>MBrown</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Waller</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
+<tr><td>MBrown</td>        <td></td><td align=right>55</td></tr>
+<tr><td>Waller</td>        <td></td><td align=right>45</td></tr>
+<tr><td>Tucker</td>        <td></td><td align=right>80</td></tr>
 <tr><td>Lawrence</td>      <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>310</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (6)</b></font></td></tr>
-<tr><td>Love</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Love</td>          <td></td><td align=right>75</td></tr>
+<tr><td>Jacobs</td>        <td></td><td align=right>35</td></tr>
 <tr><td>MDavis</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Pittman</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Pittman</td>       <td></td><td align=right>105</td></tr>
 <tr><td>Hill</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Bullock</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Harris</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Bullock</td>       <td></td><td align=right>20</td></tr>
+<tr><td>Harris</td>        <td></td><td align=right>130</td></tr>
+<tr><td></td>              <td></td><td align=right>365</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (7)</b></font></td></tr>
-<tr><td>Wentz</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Patterson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Booker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>MWilliams</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Wentz</td>         <td></td><td align=right>140</td></tr>
+<tr><td>Patterson</td>     <td></td><td align=right>60</td></tr>
+<tr><td>Booker</td>        <td></td><td align=right>45</td></tr>
+<tr><td>MWilliams</td>     <td></td><td align=right>25</td></tr>
 <tr><td>Cooper</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Pitts</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Pitts</td>         <td></td><td align=right>30</td></tr>
 <tr><td>Zuerlein</td>      <td></td><td align=right>0</td></tr>
-<tr><td>DSmith</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>DSmith</td>        <td></td><td align=right>155</td></tr>
+<tr><td></td>              <td></td><td align=right>455</td></tr>
 </table>
 </td>
 </tr>
@@ -125,29 +125,29 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (9)</b></font></td></tr>
-<tr><td>Ryan</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Chubb</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Ryan</td>          <td></td><td align=right>185</td></tr>
+<tr><td>Chubb</td>         <td></td><td align=right>315</td></tr>
+<tr><td>Ekeler</td>        <td></td><td align=right>25</td></tr>
 <tr><td>DAdams</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Cooks</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Higbee</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Gay</td>           <td></td><td align=right>0</td></tr>
-<tr><td>Ammendola</td>     <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Cooks</td>         <td></td><td align=right>25</td></tr>
+<tr><td>Higbee</td>        <td></td><td align=right>25</td></tr>
+<tr><td>Gay</td>           <td></td><td align=right>115</td></tr>
+<tr><td>Ammendola</td>     <td></td><td align=right>45</td></tr>
+<tr><td></td>              <td></td><td align=right>735</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (10)</b></font></td></tr>
-<tr><td>Hurts</td>         <td></td><td align=right>0</td></tr>
-<tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td>JTaylor</td>       <td></td><td align=right>0</td></tr>
-<tr><td>KAllen</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Hurts</td>         <td></td><td align=right>105</td></tr>
+<tr><td>JTaylor</td>       <td></td><td align=right>435</td></tr>
+<tr><td>AJones</td>        <td></td><td align=right>25</td></tr>
+<tr><td>Allen</td>         <td></td><td align=right>50</td></tr>
 <tr><td>DMoore</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Goedert</td>       <td></td><td align=right>0</td></tr>
-<tr><td>McPherson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Fields</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>McPherson</td>     <td></td><td align=right>25</td></tr>
+<tr><td>Fields</td>        <td></td><td align=right>95</td></tr>
+<tr><td></td>              <td></td><td align=right>735</td></tr>
 </table>
 <td></td><td></td>
 </td>
@@ -166,45 +166,45 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>High</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
+<tr><td><font size=2>Roger(7)</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>6605</font></td>
+    <td><font size=2>5935</font></td>
+    <td><font size=2>1325</font></td>
+    <td><font size=2>455</font></td>
+    <td><font size=2>2</font></td>
 <tr><td><font size=2>Sam(9)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>5460</font></td>
-    <td><font size=2>4655</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>6195</font></td>
+    <td><font size=2>5390</font></td>
     <td><font size=2>1045</font></td>
     <td><font size=2>425</font></td>
     <td><font size=2>1</font></td>
-<tr><td><font size=2>Roger(7)</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>6150</font></td>
-    <td><font size=2>5570</font></td>
-    <td><font size=2>1325</font></td>
-    <td><font size=2>475</font></td>
-    <td><font size=2>2</font></td>
 <tr><td><font size=2>Matthew(1)</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>5330</font></td>
-    <td><font size=2>4835</font></td>
+    <td><font size=2>5810</font></td>
+    <td><font size=2>5265</font></td>
     <td><font size=2>1360</font></td>
     <td><font size=2>220</font></td>
     <td><font size=2>2</font></td>
-<tr><td><font size=2>Steven(3)</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>4975</font></td>
-    <td><font size=2>5875</font></td>
-    <td><font size=2>910</font></td>
-    <td><font size=2>360</font></td>
-    <td><font size=2>0</font></td>
 <tr><td><font size=2>Mike(5)</font></td>
-    <td><font size=2>2</font></td>
+    <td><font size=2>3</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>4360</font></td>
-    <td><font size=2>6345</font></td>
+    <td><font size=2>4855</font></td>
+    <td><font size=2>6655</font></td>
     <td><font size=2>805</font></td>
     <td><font size=2>325</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>Steven(3)</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>5430</font></td>
+    <td><font size=2>6435</font></td>
+    <td><font size=2>910</font></td>
+    <td><font size=2>360</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2></font></td>
     <td><font size=2></font></td>
@@ -215,42 +215,42 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>John(10)</font></td>
-    <td><font size=2>6</font></td>
+    <td><font size=2>7</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>4680</font></td>
-    <td><font size=2>4165</font></td>
+    <td><font size=2>5415</font></td>
+    <td><font size=2>4900</font></td>
     <td><font size=2>765</font></td>
     <td><font size=2>390</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
 <tr><td><font size=2>Rich(2)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>5835</font></td>
-    <td><font size=2>5435</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>6265</font></td>
+    <td><font size=2>5915</font></td>
     <td><font size=2>1120</font></td>
-    <td><font size=2>465</font></td>
+    <td><font size=2>430</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>Grant(4)</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>5705</font></td>
-    <td><font size=2>5515</font></td>
+    <td><font size=2>6265</font></td>
+    <td><font size=2>5970</font></td>
     <td><font size=2>865</font></td>
     <td><font size=2>400</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Randy(8)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>5620</font></td>
-    <td><font size=2>5505</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>5930</font></td>
+    <td><font size=2>6000</font></td>
     <td><font size=2>830</font></td>
-    <td><font size=2>460</font></td>
+    <td><font size=2>310</font></td>
     <td><font size=2>2</font></td>
 <tr><td><font size=2>States(6)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>4480</font></td>
-    <td><font size=2>4695</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>4845</font></td>
+    <td><font size=2>5150</font></td>
     <td><font size=2>795</font></td>
     <td><font size=2>205</font></td>
     <td><font size=2>0</font></td>
